@@ -18,6 +18,13 @@
 #ifndef CAML_OSDEPS_H
 #define CAML_OSDEPS_H
 
+#ifdef _WIN32
+extern unsigned short caml_win32_major;
+extern unsigned short caml_win32_minor;
+extern unsigned short caml_win32_build;
+extern unsigned short caml_win32_revision;
+#endif
+
 #ifdef CAML_INTERNALS
 
 #include "misc.h"
@@ -91,11 +98,14 @@ extern char_os * caml_executable_name(void);
 */
 extern char_os *caml_secure_getenv(char_os const *var);
 
-/* Windows Unicode support */
-
 #ifdef _WIN32
 
 extern int caml_win32_rename(const wchar_t *, const wchar_t *);
+
+extern void caml_probe_win32_version(void);
+extern void caml_setup_win32_terminal(void);
+
+/* Windows Unicode support */
 
 extern int win_multi_byte_to_wide_char(const char* s, int slen, wchar_t *out, int outlen);
 extern int win_wide_char_to_multi_byte(const wchar_t* s, int slen, char *out, int outlen);
